--- a/index.html
+++ b/index.html
@@ -53,15 +53,48 @@
     </header>
     <main>
       <!-- Category Section -->
-      <section class="category-section container my-4">
+      <section class="category-section container my-4 text-center">
         <ul
-          class="d-flex justify-content-between list-unstyled"
+          class="d-flex flex-column flex-md-row justify-content-between align-items-center list-unstyled"
           id="list-container"
         >
           <li>
-            <a class="text-decoration-none fw-semibold item" href="">Home</a>
+            <button class="fw-semibold item border-0">
+              <a class="text-decoration-none item" href="">Home</a>
+            </button>
           </li>
         </ul>
+      </section>
+      <div class="container bg-white rounded fw-semibold py-3 ps-4">
+        <p id="news-items-count" class="mb-0">
+          4 items found for category Entertainment
+        </p>
+      </div>
+
+      <!-- News Cards Section -->
+      <section class="container px-0">
+        <div id="card-container">
+          <div class="card my-4">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img src="..." class="img-fluid rounded-start" alt="..." />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">
+                    This is a wider card with supporting text below as a natural
+                    lead-in to additional content. This content is a little bit
+                    longer.
+                  </p>
+                  <p class="card-text">
+                    <small class="text-muted">Last updated 3 mins ago</small>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <script
