--- a/index.html
+++ b/index.html
@@ -51,52 +51,40 @@
         </div>
       </nav>
     </header>
-    <main>
+    <main class="container">
       <!-- Category Section -->
-      <section class="category-section container my-4 text-center">
+      <section class="category-section my-4 text-center max">
         <ul
           class="d-flex flex-column flex-md-row justify-content-between align-items-center list-unstyled"
           id="list-container"
         >
           <li>
-            <button class="fw-semibold item border-0">
-              <a class="text-decoration-none item" href="">Home</a>
+            <button class="border-0">
+              <a
+                class="text-decoration-none item btn rounded fw-semibold"
+                href=""
+                >Home</a
+              >
             </button>
           </li>
         </ul>
       </section>
-      <div class="container bg-white rounded fw-semibold py-3 ps-4">
+      <div class="bg-white rounded fw-semibold py-3 ps-4 max">
         <p id="news-items-count" class="mb-0">
           4 items found for category Entertainment
         </p>
       </div>
 
       <!-- News Cards Section -->
-      <section class="container px-0">
-        <div id="card-container">
-          <div class="card my-4">
-            <div class="row g-0">
-              <div class="col-md-4">
-                <img src="..." class="img-fluid rounded-start" alt="..." />
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
-                  </p>
-                  <p class="card-text">
-                    <small class="text-muted">Last updated 3 mins ago</small>
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+      <section class="px-0">
+        <div id="card-container"></div>
       </section>
     </main>
+    <footer class="mt-5 py-4 bg-white shadow-sm">
+      <p class="mb-0 text-center text-secondary fw-semibold">
+        Copyright 2022 Daily Tribune
+      </p>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
