--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/c0814a4cfc.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
@@ -55,7 +59,7 @@
       <!-- Category Section -->
       <section class="category-section my-4 text-center max">
         <ul
-          class="d-flex flex-column flex-md-row justify-content-between align-items-center list-unstyled"
+          class="d-flex flex-column flex-wrap flex-md-row justify-content-between align-items-center list-unstyled"
           id="list-container"
         >
           <li>
@@ -69,15 +73,65 @@
           </li>
         </ul>
       </section>
-      <div class="bg-white rounded fw-semibold py-3 ps-4 max">
-        <p id="news-items-count" class="mb-0">
-          4 items found for category Entertainment
-        </p>
-      </div>
+
+      <!-- Show News Numbers -->
+      <section>
+        <div class="bg-white rounded fw-semibold py-3 ps-4 max">
+          <p id="news-items-count" class="mb-0">
+            4 items found for category Entertainment
+          </p>
+        </div>
+      </section>
 
       <!-- News Cards Section -->
       <section class="px-0">
         <div id="card-container"></div>
+      </section>
+
+      <!--Modal Section  -->
+      <section>
+        <!-- Button trigger modal -->
+        <button
+          type="button"
+          class="btn btn-primary"
+          data-bs-toggle="modal"
+          data-bs-target="#exampleModal"
+        >
+          Launch demo modal
+        </button>
+
+        <!-- Modal -->
+        <div
+          class="modal fade"
+          id="exampleModal"
+          tabindex="-1"
+          aria-labelledby="modalTitle"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="modalTitle">Modal title</h5>
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="modal"
+                  aria-label="Close"
+                ></button>
+              </div>
+              <div class="modal-body" id="modal-body">...</div>
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                  data-bs-dismiss="modal"
+                >
+                  Close
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <footer class="mt-5 py-4 bg-white shadow-sm">
