--- a/blog.html
+++ b/blog.html
@@ -20,7 +20,7 @@
     <header>
       <nav id="home" class="navbar navbar-expand-lg bg-light shadow-sm">
         <div class="container py-2">
-          <a class="navbar-brand fw-semibold" href="#home"
+          <a class="navbar-brand fw-semibold" href="./index.html"
             ><span class="iris py-1 px-2 rounded-1">Daily</span> Tribune</a
           >
           <button
@@ -43,12 +43,16 @@
                 <a
                   class="nav-link fw-semibold text-dark"
                   aria-current="page"
-                  href="#"
+                  href="./index.html"
                   >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link fw-semibold text-dark" href="#">Blog</a>
+                <a
+                  class="nav-link fw-semibold text-dark iris-text"
+                  href="./blog.html"
+                  >Blog</a
+                >
               </li>
             </ul>
           </div>
