--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <nav id="home" class="navbar navbar-expand-lg bg-light shadow-sm">
         <div class="container py-2">
-          <a class="navbar-brand fw-semibold" href="#home"
+          <a class="navbar-brand fw-semibold" href="./index.html"
             ><span class="iris py-1 px-2 rounded-1">Daily</span> Tribune</a
           >
           <button
@@ -43,19 +43,21 @@
                 <a
                   class="nav-link fw-semibold text-dark"
                   aria-current="page"
-                  href="#"
+                  href="#home"
                   >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link fw-semibold text-dark" href="#">Blog</a>
+                <a class="nav-link fw-semibold text-dark" href="./blog.html"
+                  >Blog</a
+                >
               </li>
             </ul>
           </div>
         </div>
       </nav>
     </header>
-    <main class="container">
+    <main class="container pb-5">
       <!-- Category Section -->
       <section class="category-section my-4 text-center max">
         <ul
@@ -136,7 +138,7 @@
         </p>
       </section>
     </main>
-    <footer class="mt-5 py-2 bg-white">
+    <footer class="py-3 bg-white">
       <p class="mb-0 text-center text-secondary fw-semibold">
         Copyright 2022 Daily Tribune
       </p>
