--- a/blog.html
+++ b/blog.html
@@ -48,9 +48,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a
-                  class="nav-link fw-semibold text-dark iris-text"
-                  href="./blog.html"
+                <a class="nav-link fw-semibold iris-text" href="./blog.html"
                   >Blog</a
                 >
               </li>
@@ -60,7 +58,7 @@
       </nav>
     </header>
     <main class="mt-5 container pb-5">
-      <div class="accordion" id="accordionExample">
+      <div class="accordion pb-5" id="accordionExample">
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingOne">
             <button
