--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a
-                  class="nav-link fw-semibold text-dark"
+                  class="nav-link fw-semibold iris-text"
                   aria-current="page"
                   href="#home"
                   >Home</a
@@ -79,9 +79,7 @@
       <!-- Show News Numbers -->
       <section>
         <div class="bg-white rounded fw-semibold py-3 ps-4 max">
-          <p id="news-items-count" class="mb-0">
-            4 items found for category Entertainment
-          </p>
+          <p id="news-items-count" class="mb-0"></p>
         </div>
       </section>
 
