Updated blog page

--- a/blog.html
+++ b/blog.html
@@ -175,12 +175,14 @@
                 >The <code>.forEach()</code> method is just a different way of
                 doing <code>for</code> loop.</strong
               >To me, the most compelling case for using .forEach() in favor of
-              a for loop is that it’s easier. <br />
-              <strong>.map()</strong> when you want to transform elements in an
-              array and create another array with it’s element .
+              a for loop is that it's easier. <br />
+              <code>.map()</code> when you want to transform elements in an
+              array and create another array with it's element .
               <br />
               <code>.find()</code>When you want to select a single element from
               an array. <br />
+              The <code>.filter()</code>method creates a new array filled with
+              elements that pass a test provided by a function. <br />
               <code>.reduce()</code> when you want derive a single value from
               multiple elements in an array.
               <strong></strong>
